--- a/ICT1009_Assignment_CPP/ICT1009_Assignment_CPP.vcxproj.filters
+++ b/ICT1009_Assignment_CPP/ICT1009_Assignment_CPP.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="CRUDFunction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="concol.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dirent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="importXML.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mainMenu.cpp">
@@ -60,6 +69,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CRUDFunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FileDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="importXML.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
