--- a/ICT1009_Assignment_CPP/ICT1009_Assignment_CPP.vcxproj.filters
+++ b/ICT1009_Assignment_CPP/ICT1009_Assignment_CPP.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="importXML.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mainMenu.cpp">
@@ -77,5 +80,10 @@
     <ClCompile Include="importXML.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ICT1009_Assignment_CPP.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
