--- a/ICT1009_Assignment_CPP/ICT1009_Assignment_CPP.vcxproj
+++ b/ICT1009_Assignment_CPP/ICT1009_Assignment_CPP.vcxproj
@@ -76,16 +76,16 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\KH\Source\Repos\ICT1009_CPP_Project\External Lib\dirent-1.21;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\KH\Source\Repos\ICT1009_CPP_Project\External Lib\dirent-1.21;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\KH\Source\Repos\ICT1009_CPP_Project\dirent-1.21\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\KH\Source\Repos\ICT1009_CPP_Project\dirent-1.21\include;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Users\KH\Source\Repos\ICT1009_CPP_Project\External Lib\dirent-1.21;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\KH\Source\Repos\ICT1009_CPP_Project\External Lib\dirent-1.21;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\KH\Source\Repos\ICT1009_CPP_Project\dirent-1.21\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\KH\Source\Repos\ICT1009_CPP_Project\dirent-1.21\include;$(LibraryPath)</LibraryPath>
     <ExecutablePath>m</ExecutablePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
